--- a/derivative/index.ipynb
+++ b/derivative/index.ipynb
@@ -141,15 +141,98 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T06:25:26.760168Z",
-     "start_time": "2024-11-29T06:25:26.754168Z"
+     "end_time": "2024-11-29T08:13:01.192450Z",
+     "start_time": "2024-11-29T08:13:01.184315Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "data = [\n",
+    "    [1, 3.5, 6, 8.5],  # X\n",
+    "    [2.7, 3.32, 12.18, 20.1]  # Y\n",
+    "]\n",
+    "pembulatan = 5\n",
+    "\n",
+    "x = 5\n",
+    "h = data[0][1] - data[0][0]\n",
+    "s = (x - data[0][-1])/h\n",
+    "print(\"======================== COMPONENTS ========================\")\n",
+    "print(f\"x: {x}\")\n",
+    "print(f\"h: {h}\")\n",
+    "print(f\"s: {s:.5f}\\n\")\n",
+    "\n",
+    "n = len(data[1])\n",
+    "\n",
+    "# res = [\n",
+    "#     [-0.63212],\n",
+    "#     [-0.27763],\n",
+    "#     [0.10653],\n",
+    "#     [0.5288],\n",
+    "#     [1]\n",
+    "# ]\n",
+    "res = [[y] for y in data[1]]\n",
+    "\n",
+    "# ===== Calculation Tables =====\n",
+    "for i in range(n-1):\n",
+    "    for j in range(n-i-1):\n",
+    "        curr = res[j][i]\n",
+    "        curr_forward = res[j+1][i]\n",
+    "        temp = curr_forward - curr\n",
+    "        res[j].append(temp)\n",
+    "\n",
+    "print(\"======================== TABLE ========================\")\n",
+    "for val in res:\n",
+    "    for v in val:\n",
+    "        print(f\"{round(v, pembulatan):<12}\", end=\"\")\n",
+    "    print(\"\")\n",
+    "print(\"\")\n",
+    "\n",
+    "# ===== Calculation Value =====\n",
+    "res_inv = res[::-1]\n",
+    "y = res_inv[1][-1]\n",
+    "cnt = 2\n",
+    "\n",
+    "for val in res[::-1][2:]:\n",
+    "    # val = round(val, 5)\n",
+    "    val = val[-1] / math.factorial(cnt)\n",
+    "    s_sum = 0\n",
+    "    for j in range(cnt):\n",
+    "        s_temp = 1\n",
+    "        for k in range(cnt):\n",
+    "            if k != j:\n",
+    "                s_temp *= (s + k)\n",
+    "        s_sum += s_temp\n",
+    "    val *= s_sum    \n",
+    "    cnt += 1\n",
+    "    y += val\n",
+    "    \n",
+    "y /= h\n",
+    "print(\"======================== RESULT ========================\")\n",
+    "print(f\"y'({x}) = {round(y, pembulatan)}\")"
+   ],
    "id": "ea1d38af3021bd07",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================== COMPONENTS ========================\n",
+      "x: 5\n",
+      "h: 2.5\n",
+      "s: -1.40000\n",
+      "\n",
+      "======================== TABLE ========================\n",
+      "2.7         0.62        8.24        -9.18       \n",
+      "3.32        8.86        -0.94       \n",
+      "12.18       7.92        \n",
+      "20.1        \n",
+      "\n",
+      "======================== RESULT ========================\n",
+      "y'(5) = 3.82464\n"
+     ]
+    }
+   ],
+   "execution_count": 43
   },
   {
    "metadata": {},
