feat(derivative): Add lagrange method

--- a/derivative/index.ipynb
+++ b/derivative/index.ipynb
@@ -241,12 +241,119 @@
    "id": "3c9f5961f9fff533"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-29T09:14:55.113657Z",
+     "start_time": "2024-11-29T09:14:55.095707Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "8ec94f109abd8e44"
+   "source": [
+    "data = [\n",
+    "    [1, 3.5, 6, 8.5],  # X\n",
+    "    [2.7, 3.32, 12.18, 20.1]  # Y\n",
+    "]\n",
+    "\n",
+    "pembulatan = 5\n",
+    "\n",
+    "n = len(data[1])\n",
+    "x = 5\n",
+    "\n",
+    "'''\n",
+    "coords = [\n",
+    "    [i, Li, Pi]\n",
+    "]\n",
+    "'''\n",
+    "coords = [\n",
+    "    [0],\n",
+    "    [1],\n",
+    "    [2],\n",
+    "    [3]\n",
+    "]\n",
+    "\n",
+    "# ===== CALCULATE Li =====\n",
+    "for idx, coord in enumerate(coords):\n",
+    "    i = coord[0]\n",
+    "    xi = data[0][i]\n",
+    "    li = 1\n",
+    "    numerator = 0\n",
+    "    denominator = 1\n",
+    "    # ===== code here =====\n",
+    "    # for j_idx, coord2 in enumerate(coords):\n",
+    "    #     j = coord2[0]\n",
+    "    #     if j != i:\n",
+    "    #         # j = coords[j][0]\n",
+    "    #         xj = data[0][j]\n",
+    "    #         numerator += (x - xj)\n",
+    "    #         denominator *= (xi - xj)\n",
+    "    #         # li *= ((x - xj) / (xi - xj))\n",
+    "    # li = numerator / denominator\n",
+    "    \n",
+    "    # Numerator\n",
+    "    for j_idx, coord2 in enumerate(coords):\n",
+    "        j = coord2[0]\n",
+    "        j_temp = 0\n",
+    "        if j != i:\n",
+    "            k_temp = 1\n",
+    "            for k_idx, coord3 in enumerate(coords):\n",
+    "                k = coord3[0]\n",
+    "                if k != j and k != i:\n",
+    "                    xk = data[0][k]\n",
+    "                    k_temp *= (x - xk)\n",
+    "            j_temp += k_temp\n",
+    "        numerator += j_temp\n",
+    "        \n",
+    "    # Denominator\n",
+    "    for k_idx, coord2 in enumerate(coords):\n",
+    "        k = coord2[0]\n",
+    "        if k != i:\n",
+    "            xk = data[0][k]\n",
+    "            denominator *= (xi - xk)\n",
+    "    \n",
+    "    li = numerator / denominator\n",
+    "    \n",
+    "    pi = data[1][i] * li\n",
+    "    coords[idx].append(li)\n",
+    "    coords[idx].append(pi)\n",
+    "\n",
+    "print(\"======================== TABLE ==========================\")\n",
+    "print(f\"{'x':<12}{'f(x)':<12}{'L`i(xi)':<12}{'Pi':<12}\")\n",
+    "for coord in coords:\n",
+    "    i = coord[0]\n",
+    "    print(f\"{data[0][i]:<12}\", end=\"\")\n",
+    "    print(f\"{data[1][i]:<12}\", end=\"\")\n",
+    "    print(f\"{round(coord[1], pembulatan):<12}\", end=\"\")\n",
+    "    print(f\"{round(coord[2], pembulatan):<12}\", end=\"\")\n",
+    "    print(\"\")\n",
+    "print(\"\")\n",
+    "\n",
+    "# ===== CALCULATE Pn(x) =====\n",
+    "pn = 0\n",
+    "for coord in coords:\n",
+    "    pn += coord[-1]\n",
+    "\n",
+    "print(\"======================== RESULT ==========================\")\n",
+    "print(f\"f'({x}) = {round(pn, pembulatan)}\")"
+   ],
+   "id": "8ec94f109abd8e44",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================== TABLE ==========================\n",
+      "x           f(x)        L`i(xi)     Pi          \n",
+      "1           2.7         0.03467     0.0936      \n",
+      "3.5         3.32        -0.464      -1.54048    \n",
+      "6           12.18       0.424       5.16432     \n",
+      "8.5         20.1        0.00533     0.1072      \n",
+      "\n",
+      "======================== RESULT ==========================\n",
+      "f'(5) = 3.82464\n"
+     ]
+    }
+   ],
+   "execution_count": 51
   }
  ],
  "metadata": {
