--- a/derivative/index.ipynb
+++ b/derivative/index.ipynb
@@ -243,8 +243,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T09:14:55.113657Z",
-     "start_time": "2024-11-29T09:14:55.095707Z"
+     "end_time": "2024-11-29T09:18:41.802244Z",
+     "start_time": "2024-11-29T09:18:41.785945Z"
     }
    },
    "cell_type": "code",
@@ -317,7 +317,7 @@
     "    coords[idx].append(pi)\n",
     "\n",
     "print(\"======================== TABLE ==========================\")\n",
-    "print(f\"{'x':<12}{'f(x)':<12}{'L`i(xi)':<12}{'Pi':<12}\")\n",
+    "print(f\"{'x':<12}{'f(x)':<12}{'L`i(xi)':<12}{'P`i':<12}\")\n",
     "for coord in coords:\n",
     "    i = coord[0]\n",
     "    print(f\"{data[0][i]:<12}\", end=\"\")\n",
@@ -327,7 +327,7 @@
     "    print(\"\")\n",
     "print(\"\")\n",
     "\n",
-    "# ===== CALCULATE Pn(x) =====\n",
+    "# ===== CALCULATE P'n(x) =====\n",
     "pn = 0\n",
     "for coord in coords:\n",
     "    pn += coord[-1]\n",
@@ -342,7 +342,7 @@
      "output_type": "stream",
      "text": [
       "======================== TABLE ==========================\n",
-      "x           f(x)        L`i(xi)     Pi          \n",
+      "x           f(x)        L`i(xi)     P`i         \n",
       "1           2.7         0.03467     0.0936      \n",
       "3.5         3.32        -0.464      -1.54048    \n",
       "6           12.18       0.424       5.16432     \n",
@@ -353,7 +353,7 @@
      ]
     }
    ],
-   "execution_count": 51
+   "execution_count": 54
   }
  ],
  "metadata": {
