--- a/spnl/index.ipynb
+++ b/spnl/index.ipynb
@@ -3,18 +3,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T02:35:37.480343Z",
-     "start_time": "2024-11-29T02:35:37.468879Z"
+     "end_time": "2024-11-29T09:47:38.323223Z",
+     "start_time": "2024-11-29T09:47:37.626441Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from sympy import symbols, Eq, solve, Matrix\n",
-    "import sympy as sp"
+    "import sympy as sp\n",
+    "import numpy as np"
    ],
    "id": "6b4dec182b61e7dd",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -80,8 +81,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T03:03:43.561700Z",
-     "start_time": "2024-11-29T03:03:43.546060Z"
+     "end_time": "2024-11-29T09:48:50.230628Z",
+     "start_time": "2024-11-29T09:48:50.225598Z"
     }
    },
    "cell_type": "code",
@@ -100,7 +101,7 @@
     "        \n",
     "    return jacobian\n",
     "\n",
-    "def find_first_approach(vars, xys, jacobian):\n",
+    "def find_jacobian_value(vars, xys, jacobian):\n",
     "    js = []\n",
     "    \n",
     "    for iter, jacob in enumerate(jacobian):\n",
@@ -109,49 +110,86 @@
     "            dics = {}\n",
     "            for sym, var in zip(vars, xys):\n",
     "                dics[sym] = var\n",
-    "                print(dics)\n",
     "            temp.append(j.subs(dics).evalf())\n",
     "        js.append(temp)\n",
     "    return js"
    ],
    "id": "f63ba9c7c866ec1a",
    "outputs": [],
-   "execution_count": 50
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T03:08:08.153978Z",
-     "start_time": "2024-11-29T03:08:08.123654Z"
+     "end_time": "2024-11-29T10:06:03.018978Z",
+     "start_time": "2024-11-29T10:06:03.004840Z"
     }
    },
    "cell_type": "code",
    "source": [
     "x = symbols('x')\n",
     "y = symbols('y')\n",
+    "pembulatan = 5\n",
     "\n",
-    "func_x = (11 + 4*y - x) / (y)\n",
-    "func_y = (4 + x + 4*y) / (x)\n",
+    "func_x = x * y + x - 4*y - 11\n",
+    "func_y = x*y - x - 4*y - 4\n",
     "\n",
     "xys = [\n",
     "    [0, 0]\n",
     "]\n",
     "\n",
-    "# print(sp.diff(func_x, y))\n",
-    "\n",
+    "# ===== INITIAL JACOBIAN =====\n",
+    "print(\"======================== JACOBIAN ==========================\")\n",
     "jacobian = find_first_jacobian([x, y], [func_x, func_y], xys)\n",
     "\n",
-    "# for iter, jacob in enumerate(jacobian):\n",
-    "#     for j in jacob:\n",
-    "#         curr = j\n",
-    "#         for i in range(2):\n",
-    "#             if i == 0:\n",
-    "#                 curr.subs({x: 1})\n",
-    "#             else:\n",
-    "#                 curr.subs({y: 1})\n",
-    "#         print(curr.evalf())\n",
-    "print(jacobian)\n",
-    "# print(find_first_approach([x, y], xys[0], jacobian))"
+    "first_approach = find_jacobian_value([x, y], xys[0], jacobian)\n",
+    "\n",
+    "for values in first_approach:\n",
+    "    for pos, value in enumerate(values):\n",
+    "        if pos == 0:\n",
+    "            print(\"|\", end=\"\")\n",
+    "        if (pos < len(values) - 1):\n",
+    "            print(f\"{round(float(value), 5):<12}\", end=\"\")\n",
+    "        else:\n",
+    "            print(f\"{round(float(value), 5)}\", end=\"\")\n",
+    "        if pos == len(values) - 1:\n",
+    "            print(\"|\", end=\"\")\n",
+    "    print(\"\")\n",
+    "print(\"\")\n",
+    "\n",
+    "# ===== F1 AND F2 =====\n",
+    "print(\"======================== F1 AND F2 ==========================\")\n",
+    "f1 = func_x.subs({x: xys[0][0], y: xys[0][1]}).evalf()\n",
+    "f2 = func_y.subs({x: xys[0][0], y: xys[0][1]}).evalf()\n",
+    "\n",
+    "print(f\"f1(x0, y0): {round(float(f1), pembulatan)}\\nf2(x0, y0): {round(float(f2), pembulatan)}\\n\")\n",
+    "\n",
+    "# ===== FIRST APPROACH X AND Y =====\n",
+    "print(\"======================== VALUES OF X AND Y ==========================\")\n",
+    "# iteration\n",
+    "iteration = 3\n",
+    "\n",
+    "for i in range(iteration):\n",
+    "    X = np.array(xys[-1], dtype=float)  # Current guess for [x, y]\n",
+    "    F = np.array([f1, f2], dtype=float)  # Function values at current guess\n",
+    "\n",
+    "    # Get the Jacobian matrix at the current guess\n",
+    "    jacobian_values = np.array(find_jacobian_value([x, y], xys[-1], jacobian), dtype=float)\n",
+    "\n",
+    "    # Solve for the correction delta (J * delta = F, so we need to invert J)\n",
+    "    delta = np.linalg.solve(jacobian_values, F)  # Solving J * delta = F\n",
+    "\n",
+    "    # Update X (x, y)\n",
+    "    X_new = X - delta  # Update using the correction delta\n",
+    "    print(X_new)\n",
+    "\n",
+    "    # Append the new [x, y] to the list for the next iteration\n",
+    "    xys.append(list(X_new))\n",
+    "\n",
+    "    # Recalculate f1 and f2 for the new x, y for next iteration\n",
+    "    f1 = func_x.subs({x: X_new[0], y: X_new[1]}).evalf()\n",
+    "    f2 = func_y.subs({x: X_new[0], y: X_new[1]}).evalf()\n",
+    "    \n"
    ],
    "id": "eefc69a6ad287383",
    "outputs": [
@@ -159,11 +197,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1/y, 4/y - (-x + 4*y + 11)/y**2], [1/x - (x + 4*y + 4)/x**2, 4/x]]\n"
+      "======================== JACOBIAN ==========================\n",
+      "|1.0         -4.0|\n",
+      "|-1.0        -4.0|\n",
+      "\n",
+      "======================== F1 AND F2 ==========================\n",
+      "f1(x0, y0): -11.0\n",
+      "f2(x0, y0): -4.0\n",
+      "\n",
+      "======================== VALUES OF X AND Y ==========================\n",
+      "[ 3.5   -1.875]\n",
+      "[  3.5 -15. ]\n",
+      "[  3.5 -15. ]\n"
      ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 76
   },
   {
    "metadata": {},
