refactor(spnl): Add information

--- a/spnl/index.ipynb
+++ b/spnl/index.ipynb
@@ -121,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:06:03.018978Z",
-     "start_time": "2024-11-29T10:06:03.004840Z"
+     "end_time": "2024-11-29T10:07:18.846976Z",
+     "start_time": "2024-11-29T10:07:18.828812Z"
     }
    },
    "cell_type": "code",
@@ -181,7 +181,7 @@
     "\n",
     "    # Update X (x, y)\n",
     "    X_new = X - delta  # Update using the correction delta\n",
-    "    print(X_new)\n",
+    "    print(f\"Iteration {i + 1}: {X_new}\")\n",
     "\n",
     "    # Append the new [x, y] to the list for the next iteration\n",
     "    xys.append(list(X_new))\n",
@@ -206,13 +206,13 @@
       "f2(x0, y0): -4.0\n",
       "\n",
       "======================== VALUES OF X AND Y ==========================\n",
-      "[ 3.5   -1.875]\n",
-      "[  3.5 -15. ]\n",
-      "[  3.5 -15. ]\n"
+      "Iteration 1: [ 3.5   -1.875]\n",
+      "Iteration 2: [  3.5 -15. ]\n",
+      "Iteration 3: [  3.5 -15. ]\n"
      ]
     }
    ],
-   "execution_count": 76
+   "execution_count": 77
   },
   {
    "metadata": {},
