--- a/spnl/index.ipynb
+++ b/spnl/index.ipynb
@@ -29,8 +29,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-29T02:30:46.936440Z",
-     "start_time": "2024-11-29T02:30:46.920802Z"
+     "end_time": "2024-11-29T12:11:41.394093Z",
+     "start_time": "2024-11-29T12:11:41.383093Z"
     }
    },
    "source": [
@@ -42,16 +42,16 @@
     "n = 4  # Adjust the n\n",
     "\n",
     "xys = [\n",
-    "    [3, -12]\n",
+    "    [1, 1]\n",
     "]\n",
     "\n",
-    "func_x = (11 + 4*y - x) / (y)\n",
-    "func_y = (4 + x + 4*y) / (x)\n",
+    "func_x = ((19 + y**2 - 4*y) / (2)) ** (1/3)\n",
+    "func_y = ((26 - x**2 - 2*x) / (2)) ** 0.5\n",
     "\n",
     "for i in range(n):\n",
     "    xi, yi = xys[-1]\n",
-    "    x_temp = func_x.subs({x: xi, y: yi}).evalf()\n",
-    "    y_temp = func_y.subs({x: xi, y: yi}).evalf()\n",
+    "    x_temp = round(func_x.subs({x: xi, y: yi}).evalf(), 5)\n",
+    "    y_temp = round(func_y.subs({x: xi, y: yi}).evalf(), 5)\n",
     "    xys.append([x_temp, y_temp])\n",
     "    \n",
     "for iter, res in enumerate(xys):\n",
@@ -62,15 +62,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 [3, -12]\n",
-      "1 [3.33333333333333, -13.6666666666667]\n",
-      "2 [3.43902439024390, -14.2000000000000]\n",
-      "3 [3.46753692889042, -14.3531914893617]\n",
-      "4 [3.47520639735821, -14.4036617497650]\n"
+      "0 [1, 1]\n",
+      "1 [2.00000000000000, 3.39116]\n",
+      "2 [2.03824, 3.00000000000000]\n",
+      "3 [2.00000000000000, 2.98070]\n",
+      "4 [1.99841, 3.00000000000000]\n"
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 82
   },
   {
    "metadata": {},
@@ -81,8 +81,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T09:48:50.230628Z",
-     "start_time": "2024-11-29T09:48:50.225598Z"
+     "end_time": "2024-11-29T12:12:09.564935Z",
+     "start_time": "2024-11-29T12:12:09.543932Z"
     }
    },
    "cell_type": "code",
@@ -116,13 +116,13 @@
    ],
    "id": "f63ba9c7c866ec1a",
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 83
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-29T10:07:18.846976Z",
-     "start_time": "2024-11-29T10:07:18.828812Z"
+     "end_time": "2024-11-29T12:13:29.726346Z",
+     "start_time": "2024-11-29T12:13:29.673346Z"
     }
    },
    "cell_type": "code",
@@ -131,11 +131,11 @@
     "y = symbols('y')\n",
     "pembulatan = 5\n",
     "\n",
-    "func_x = x * y + x - 4*y - 11\n",
-    "func_y = x*y - x - 4*y - 4\n",
+    "func_x = 2 * x * x * x - y ** 2 + 4 * y - 19\n",
+    "func_y = x ** 2 + 2 * x + 2 * y ** 2 - 26\n",
     "\n",
     "xys = [\n",
-    "    [0, 0]\n",
+    "    [1, 1]\n",
     "]\n",
     "\n",
     "# ===== INITIAL JACOBIAN =====\n",
@@ -198,21 +198,21 @@
      "output_type": "stream",
      "text": [
       "======================== JACOBIAN ==========================\n",
-      "|1.0         -4.0|\n",
-      "|-1.0        -4.0|\n",
+      "|6.0         2.0|\n",
+      "|4.0         4.0|\n",
       "\n",
       "======================== F1 AND F2 ==========================\n",
-      "f1(x0, y0): -11.0\n",
-      "f2(x0, y0): -4.0\n",
+      "f1(x0, y0): -14.0\n",
+      "f2(x0, y0): -21.0\n",
       "\n",
       "======================== VALUES OF X AND Y ==========================\n",
-      "Iteration 1: [ 3.5   -1.875]\n",
-      "Iteration 2: [  3.5 -15. ]\n",
-      "Iteration 3: [  3.5 -15. ]\n"
+      "Iteration 1: [1.875 5.375]\n",
+      "Iteration 2: [1.91640484 3.54779289]\n",
+      "Iteration 3: [1.99630525 3.0443017 ]\n"
      ]
     }
    ],
-   "execution_count": 77
+   "execution_count": 84
   },
   {
    "metadata": {},
